# Proyecto-Final-3

./: .gitignore  CMakeLists.txt  CSVManager.h  Inventario.h  README.md  README_ES.md  inventario_ejemplo.csv  main.cpp
Documentacion/: Programacion 3 - Editado.docx
Estructuras/: HashEntry.h  HashMap.h
data/: Inventariado.csv  InventariadoShort.csv  Inventariado_Fisico.xlsx
doc/: Promt.txt  Promt2.txt  enunciado.txt
include/: Article.h  Articulo.h  CSVManager.h  HashEntry.h  HashMap.h  HashTable.h  InventoryManager.h
src/: HashTable.cpp  InventoryManager.cpp  main.cpp
